--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@ https://templatemo.com/tm-545-finance-business
                 <div class="col-md-6 align-self-center">
                   <div class="right-content">
                     <span>our solid background on finance</span>
-                    <h2>Get to know about <em>our company</em></h2>
+                    <h2>Why Do <em> We Exist?</em></h2>
                     <p>Fusce nec ultrices lectus. Duis nec scelerisque risus. Ut id tempor turpis, ac dignissim ipsum. Nulla ullamcorper, ipsum vel condimentum congue, mi odio vehicula tellus, sit amet malesuada justo sem. 
                     <br><br>Pellentesque in sagittis lacus, vel auctor sem. Quisque eu quam eleifend, ullamcorper dui nec, luctus quam.</p>
                     <a href="" class="filled-button">Read More</a>
