--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="author" content="TemplateMo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Finance Business - Contact Page</title>
+    <title>&Proud - Contact Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -45,8 +45,8 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-8 col-xs-12">
             <ul class="left-info">
-              <li><a href="#"><i class="fa fa-clock-o"></i>Mon-Fri 09:00-17:00</a></li>
-              <li><a href="#"><i class="fa fa-phone"></i>090-080-0760</a></li>
+              <li><a href="#"><i class="fa fa-clock-o"></i>Mon-Fri 9:00AM - 5:00PM EST</a></li>
+              <li><a href="#"><i class="fa fa-phone"></i>202-806-6100</a></li>
             </ul>
           </div>
           <div class="col-md-4">
@@ -54,7 +54,7 @@ https://templatemo.com/tm-545-finance-business
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-behance"></i></a></li>
+              <!-- <li><a href="#"><i class="fa fa-behance"></i></a></li> -->
             </ul>
           </div>
         </div>
@@ -64,7 +64,7 @@ https://templatemo.com/tm-545-finance-business
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>Finance Business</h2></a>
+          <a class="navbar-brand" href="index.html"><h2>&Proud</h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -109,23 +109,23 @@ https://templatemo.com/tm-545-finance-business
             <div class="contact-item">
               <i class="fa fa-phone"></i>
               <h4>Phone</h4>
-              <p>Vivamus ut tellus mi. Nulla nec cursus elit, id vulputate nec cursus augue.</p>
-              <a href="#">090-080-0760</a>
+              <p>Ofiice Hours: Mon-Fri 9:00AM - 5:00PM EST</p>
+              <a href="#">202-806-6100</a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="contact-item">
               <i class="fa fa-envelope"></i>
               <h4>Email</h4>
-              <p>Vivamus ut tellus mi. Nulla nec cursus elit, id vulputate nec cursus augue.</p>
-              <a href="#">info@company.com</a>
+              <!-- <p>Vivamus ut tellus mi. Nulla nec cursus elit, id vulputate nec cursus augue.</p> -->
+              <a href="#">nproudco@gmail.com</a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="contact-item">
               <i class="fa fa-map-marker"></i>
               <h4>Location</h4>
-              <p>1020 New Mountain Street<br>Forest Park, FP 11220</p>
+              <p>2400 6th St NW<br>Washington, DC 20059</p>
               <a href="#">View on Google Maps</a>
             </div>
           </div>
@@ -139,7 +139,7 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-12">
             <div class="section-heading">
               <h2>Send us a <em>message</em></h2>
-              <span>Suspendisse a ante in neque iaculis lacinia</span>
+              <!-- <span>Suspendisse a ante in neque iaculis lacinia</span> -->
             </div>
           </div>
           <div class="col-md-12">
@@ -186,7 +186,7 @@ https://templatemo.com/tm-545-finance-business
 	3. Click "Share" and choose "Embed map" tab
 	4. Copy only URL and paste it within the src="" field below
 -->
-      <iframe src="https://maps.google.com/maps?q=Av.+Lúcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12416.22631168022!2d-77.0194377!3d38.9226843!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x32dcc71fc8db77c2!2sHoward%20University!5e0!3m2!1sen!2sus!4v1595976657868!5m2!1sen!2sus" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 
     <div class="partners contact-partners">
@@ -195,7 +195,7 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-12">
             <div class="owl-partners owl-carousel">
               <div class="partner-item">
-                <img src="assets/images/client-01.png" alt="">
+                <img src="assets/images/IMG_0903.PNG" alt="">
               </div>
             </div>
           </div>
@@ -209,36 +209,36 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-3 footer-item">
-            <h4>Finance Business</h4>
-            <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p>
+            <h4>&Proud</h4>
+            <p>Connect with us on Social Media!</p>
             <ul class="social-icons">
               <li><a rel="nofollow" href="https://fb.com/templatemo" target="_blank"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-behance"></i></a></li>
+              <!-- <li><a href="#"><i class="fa fa-behance"></i></a></li> -->
             </ul>
           </div>
           <div class="col-md-3 footer-item">
-            <h4>Useful Links</h4>
-            <ul class="menu-list">
-              <li><a href="#">Vivamus ut tellus mi</a></li>
-              <li><a href="#">Nulla nec cursus elit</a></li>
-              <li><a href="#">Vulputate sed nec</a></li>
-              <li><a href="#">Cursus augue hasellus</a></li>
-              <li><a href="#">Lacinia ac sapien</a></li>
-            </ul>
+            <!-- <h4>Useful Links</h4> -->
+            <!-- <ul class="menu-list"> -->
+              <!-- <li><a href="#">Vivamus ut tellus mi</a></li> -->
+              <!-- <li><a href="#">Nulla nec cursus elit</a></li> -->
+              <!-- <li><a href="#">Vulputate sed nec</a></li> -->
+              <!-- <li><a href="#">Cursus augue hasellus</a></li> -->
+              <!-- <li><a href="#">Lacinia ac sapien</a></li> -->
+            <!-- </ul> -->
           </div>
           <div class="col-md-3 footer-item">
-            <h4>Additional Pages</h4>
-            <ul class="menu-list">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">How We Work</a></li>
-              <li><a href="#">Quick Support</a></li>
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-            </ul>
+            <!-- <h4>Additional Pages</h4> -->
+            <!-- <ul class="menu-list"> -->
+              <!-- <li><a href="#">About Us</a></li> -->
+              <!-- <li><a href="#">How We Work</a></li> -->
+              <!-- <li><a href="#">Quick Support</a></li> -->
+              <!-- <li><a href="#">Contact Us</a></li> -->
+              <!-- <li><a href="#">Privacy Policy</a></li> -->
+            <!-- </ul> -->
           </div>
-          <div class="col-md-3 footer-item last-item">
+          <!-- <div class="col-md-3 footer-item last-item">
             <h4>Contact Us</h4>
             <div class="contact-form">
               <form id="contact footer-contact" action="" method="post">
@@ -265,7 +265,7 @@ https://templatemo.com/tm-545-finance-business
                   </div>
                 </div>
               </form>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -275,10 +275,10 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <p>Copyright &copy; 2020 Financial Business Co., Ltd.
+            <!-- <p>Copyright &copy; 2020 Financial Business Co., Ltd.
             
             - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
