--- a/contact.html
+++ b/contact.html
@@ -216,7 +216,7 @@ https://templatemo.com/tm-545-finance-business
               <li><a rel="nofollow" href="https://fb.com/templatemo" target="_blank"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <!-- <li><a href="#"><i class="fa fa-behance"></i></a></li> -->
+               <li><a href="#"><i class="fa fa-behance"></i></a></li> 
             </ul>
           </div>
           <div class="col-md-3 footer-item">
@@ -239,7 +239,7 @@ https://templatemo.com/tm-545-finance-business
               <!-- <li><a href="#">Privacy Policy</a></li> -->
             <!-- </ul> -->
           </div>
-          <!-- <div class="col-md-3 footer-item last-item">
+           <div class="col-md-3 footer-item last-item">
             <h4>Contact Us</h4>
             <div class="contact-form">
               <form id="contact footer-contact" action="" method="post">
@@ -266,7 +266,7 @@ https://templatemo.com/tm-545-finance-business
                   </div>
                 </div>
               </form>
-            </div> -->
+            </div> 
           </div>
         </div>
       </div>
