--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="author" content="TemplateMo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Finance Business - About Page</title>
+    <title>&Proud - About Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -18,13 +18,6 @@
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/templatemo-finance-business.css">
     <link rel="stylesheet" href="assets/css/owl.css">
-<!--
-
-Finance Business TemplateMo
-
-https://templatemo.com/tm-545-finance-business
-
--->
   </head>
 
   <body>
@@ -45,8 +38,8 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-8 col-xs-12">
             <ul class="left-info">
-              <li><a href="#"><i class="fa fa-clock-o"></i>Mon-Fri 09:00-17:00</a></li>
-              <li><a href="#"><i class="fa fa-phone"></i>090-080-0760</a></li>
+              <li><a href="#"><i class="fa fa-clock-o"></i>Mon-Fri 09:00 am - 5:00 pm (EST)</a></li>
+              <li><a href="#"><i class="fa fa-phone"></i>202-806-6100</a></li>
             </ul>
           </div>
           <div class="col-md-4">
@@ -64,7 +57,7 @@ https://templatemo.com/tm-545-finance-business
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>Finance Business</h2></a>
+          <a class="navbar-brand" href="index.html"><h2>&Proud</h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -91,12 +84,12 @@ https://templatemo.com/tm-545-finance-business
     </header>
 
     <!-- Page Content -->
-    <div class="page-heading header-text">
+    <div class="page-heading-about header-text">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <h1>About Us</h1>
-            <span>We have over 20 years of experience</span>
+            <span>Be Proud of Who You Are</span>
           </div>
         </div>
       </div>
@@ -110,16 +103,16 @@ https://templatemo.com/tm-545-finance-business
               <div class="row">
                 <div class="col-md-6 align-self-center">
                   <div class="right-content">
-                    <span>our solid background on finance</span>
+                    <span>EQUITY, EQUALITY, EDUCATION</span>
                     <h2>Why Do <em> We Exist?</em></h2>
-                    <p>Fusce nec ultrices lectus. Duis nec scelerisque risus. Ut id tempor turpis, ac dignissim ipsum. Nulla ullamcorper, ipsum vel condimentum congue, mi odio vehicula tellus, sit amet malesuada justo sem. 
-                    <br><br>Pellentesque in sagittis lacus, vel auctor sem. Quisque eu quam eleifend, ullamcorper dui nec, luctus quam.</p>
+                    <p>Our mission is to educate about equity and equality. provide interactive resources to companies to aid them in understanding cultural diversity and implementing such resources to improve diversity and inclusion.
+                    <br><br>We are here to provide companies with speaking engagements, workshops, networking, career fairs, info tables, and so much more.</p>
                     <a href="" class="filled-button">Read More</a>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="left-image">
-                    <img src="assets/images/about-image.jpeg" alt="">
+                    <img src="assets/images/diverse.jpg" alt="">
                   </div>
                 </div>
               </div>
@@ -135,54 +128,86 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-12">
             <div class="section-heading">
               <h2>Our Team <em>Members</em></h2>
-              <span>Suspendisse a ante in neque iaculis lacinia</span>
+              <span>FUTUREFORCE HACKATHON PARTICIPANTS</span>
             </div>
           </div>
-          <div class="col-md-4">
+            <div class="col-md-4">
+            <div class="team-item">
+              <img src="assets/images/Javid.jpeg" alt="">
+              <div class="down-content">
+                <h4>Javid Mitchell</h4>
+                <span>Co-Founder</span>
+                <p>Javid is a Sophomore Computer Science Major form St.George's, Grenada. He attends Howard University and is a part of Howard's Association for Computing Machinery (ACM).</p>
+                <center><a href="https://www.linkedin.com/in/javid-mitchell-0768b16b/"><i class="fa fa-linkedin"></i></a>         <a href="https://github.com/javidt28"><i class="fa fa-github"></i></a></center>
+              </div>
+            </div>
+          </div>
+
+            <div class="col-md-4">
+            <div class="team-item">
+              <img src="assets/images/kj.jpg" alt="">
+              <div class="down-content">
+                <h4>Kyndall Jones</h4>
+                <span>Co-Founder</span>
+                <p>Kyndall is a Sophomore Computer Science major form Dayton, OH. She attends Howard University and is a part of Howard's Association for Computing Machinery (ACM).</p>
+                <center><a href="https://www.linkedin.com/in/kyndall-jones-a51740188/"><i class="fa fa-linkedin"></i></a>         <a href="https://github.com/kynjonez"><i class="fa fa-github"></i></a></center>
+              </div>
+            </div>
+          </div>
+
+            <div class="col-md-4">
             <div class="team-item">
               <img src="assets/images/Malaya.jpg" alt="">
               <div class="down-content">
                 <h4>Malaya Moon</h4>
                 <span>Co-Founder</span>
-                <p>Malaya is a Sophomore Computer Science Major form Athens, Georgia. She attends Howard University and is apart of Howard’s Association for Computer Machinery (ACM) and the Army ROTC program.</p>
+                <p>Malaya is a Sophomore Computer Science major form Athen's, Georgia. She attends Howard University and is a part of Howard's Association for Computing Machinery (ACM) and the Army ROTC program.</p>
+                <center><a href="https://www.linkedin.com/in/malayamoon/"><i class="fa fa-linkedin"></i></a>         <a href="https://github.com/malayajmoon"><i class="fa fa-github"></i></a></center>
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+
+            <div class="col-md-4">
             <div class="team-item">
-              <img src="assets/images/team_02.jpg" alt="">
+            <br>
+              <img src="assets/images/Alex.jpg" alt="">
               <div class="down-content">
-                <h4>Kyndall Jones</h4>
+                <h4>Alex Boakye</h4>
                 <span>Co-Founder</span>
-                <p>Kyndall is a Sophomore Computer Science Major from Dayton, OH. She attends Howard University and is a part of Howard's Association for Computing Machinery (ACM).</p>
+                <p>Alex is a Sophomore Chemical Engineering major from Atlanta, Georgia. He attends Howard University and currently serves on the Executive Board as the  telecommunications chair of Howard’s collegiate chapter of NSBE.</p>
+                <center><a href="https://www.linkedin.com/in/alexander-boakye-880901140/"><i class="fa fa-linkedin"></i></a>         <a href="https://github.com/lexb2019"><i class="fa fa-github"></i></a></center>
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+
+            <div class="col-md-4">
             <div class="team-item">
+            <br>
               <img src="assets/images/Kemi.jpg" alt="">
               <div class="down-content">
                 <h4>Kemi Adediran</h4>
                 <span>Co-Founder</span>
-                <p>Kemi is a Sophomore Chemical Engineering Major from Eastern North Carolina. She attends Howard University and is part of The American Institute of Chemical Engineer’s regional chapter. .</p>
-                <div class="col-md-4">
+                <p>Kemi is a Sophomore Chemical Engineering Major from Eastern North Carolina. She attend Howard University and is part of The American Institute of Chemical Engineer’s regional chapter.</p>
+                <center><a href="https://www.linkedin.com/in/kemi-adediran-306478197/"><i class="fa fa-linkedin"></i></a>         <a href="https://github.com/Kemia01"><i class="fa fa-github"></i></a></center>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  
-
     <div class="fun-facts">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
             <div class="left-content">
-              <span>Lorem ipsum dolor sit amet</span>
+              <span>Identify your problems but give your power and energy to solutions.</span>
               <h2>Our solutions for your <em>business growth</em></h2>
-              <p>Pellentesque ultrices at turpis in vestibulum. Aenean pretium elit nec congue elementum. Nulla luctus laoreet porta. Maecenas at nisi tempus, porta metus vitae, faucibus augue. 
-              <br><br>Fusce et venenatis ex. Quisque varius, velit quis dictum sagittis, odio velit molestie nunc, ut posuere ante tortor ut neque.</p>
+              <p> Our company is working to create an app for HBCUs/HSIs that links students and mentors and an internship program. We want to connect with institutions to engage students face to face/virtual by implementing a portal. 
+
+
+
+              <br><br>Profiles for each university/school departments will be implemented and created in the portal with different channels. Our website will provide learning modules to outside companies to use in their workplace, workshops, as well as used virtually. Overall our target is to focus on workforce and marketplace realities.
+              </p>
               <a href="" class="filled-button">Read More</a>
             </div>
           </div>
@@ -223,7 +248,7 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>What they say <em>about us</em></h2>
+              <h2>What They Say <em>About Us</em></h2>
               <span>testimonials from our greatest clients</span>
             </div>
           </div>
@@ -234,7 +259,7 @@ https://templatemo.com/tm-545-finance-business
                 <div class="inner-content">
                   <h4>George Walker</h4>
                   <span>Chief Financial Analyst</span>
-                  <p>"Nulla ullamcorper, ipsum vel condimentum congue, mi odio vehicula tellus, sit amet malesuada justo sem sit amet quam. Pellentesque in sagittis lacus."</p>
+                  <p>"&Proud's modules have been a great addition to our company. There has been such a massive improvement with the education of diversity and inclusion here."</p>
                 </div>
                 <img src="http://placehold.it/60x60" alt="">
               </div>
@@ -243,8 +268,8 @@ https://templatemo.com/tm-545-finance-business
                 <div class="inner-content">
                   <h4>John Smith</h4>
                   <span>Market Specialist</span>
-                  <p>"In eget leo ante. Sed nibh leo, laoreet accumsan euismod quis, scelerisque a nunc. Mauris accumsan, arcu id ornare malesuada, est nulla luctus nisi."</p>
-                </div>
+                  <p>"Love this platform. I've recommended it to many clients and it gives great insight."</p>
+                </div> 
                 <img src="http://placehold.it/60x60" alt="">
               </div>
               
@@ -277,8 +302,8 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-3 footer-item">
-            <h4>Finance Business</h4>
-            <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p>
+            <h4>&Proud</h4>
+            <p>To stay updated with any features on our platform, visit and follow our social medias! </p>
             <ul class="social-icons">
               <li><a rel="nofollow" href="https://fb.com/templatemo" target="_blank"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -289,11 +314,11 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-3 footer-item">
             <h4>Useful Links</h4>
             <ul class="menu-list">
-              <li><a href="#">Vivamus ut tellus mi</a></li>
-              <li><a href="#">Nulla nec cursus elit</a></li>
-              <li><a href="#">Vulputate sed nec</a></li>
-              <li><a href="#">Cursus augue hasellus</a></li>
-              <li><a href="#">Lacinia ac sapien</a></li>
+              <li><a href="#">Learning Modules</a></li>
+              <li><a href="#">Workshop Info</a></li>
+              <li><a href="#">Networking</a></li>
+              <li><a href="#">Career Fairs</a></li>
+              <li><a href="#">Info Tables</a></li>
             </ul>
           </div>
           <div class="col-md-3 footer-item">
@@ -343,9 +368,8 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <p>Copyright &copy; 2020 Financial Business Co., Ltd.
-            
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+            <p>Copyright &copy; 2020 &Proud Co., Ltd.
+            </p>
           </div>
         </div>
       </div>
